# example2606242

./: create_pdf.py  day5.ipynb  day7_1.py  day7_2.py  day7_3.py  day7_4_mediapipe.py  day7_5.py  day8_1_main.py  day8_2_login.py  main.py  pyproject.toml  requirements.txt
data/: soccer.txt
db/baseball_chroma_db/: chroma.sqlite3
db/chroma_db/: chroma.sqlite3
db/iu_chroma_db/: chroma.sqlite3
db/kiwoom_chroma_db/: chroma.sqlite3
db/my_chroma_db/: chroma.sqlite3
html/: 동물 플래시 카드.html  동물게임 ios.html  동물퀴즈_기획서.md
login-client/: index.html
note/: day1.Excalidraw  day1.ipynb
notebooks/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb
quant_study.md/: quant_study.ipynb
quant_study.md/kiwoom_rest/: kiwoom_trader.py
template/: index.html
templates/: index.html  login.html
