[project]
name = "mykda4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.7",
    "google-genai>=2.8.0",
    "gradio>=6.18.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "pyzmq>=26.0.0",
    "requests>=2.34.2",
    "yt-dlp>=2024.1.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "pandas>=3.0.3",
    "yfinance>=1.4.1",
    "matplotlib>=3.11.0",
    "kiwoom-client>=0.1.14",
    "langchain-chroma>=1.1.0",
    "chromadb>=1.5.9",
    "langchain-community>=0.4.2",
    "wikipedia>=1.4.0",
    "pypdf>=6.13.3",
    "langchain-text-splitters>=1.1.2",
    "fastapi[standard]>=0.137.1",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "python-multipart>=0.0.32",
]
